dataset/0100sBg1100110vRvD-Credit Memo/.store/metadata/objects/LLC_BI__Credit_Memo_Screen__c.object
<CustomObject>
    <description>The Credit Memo Screen object stores information related to the creation and management of a Credit Memo&apos;s set of templates.</description>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The creator of the Credit Memo template manually populates this optional boolean field. It can be used to display (when true) or hide (when false) Credit Memo templates.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This required lookup field automatically populates and is used to specify the Credit Memo record that is associated with the Credit Memo template.</description>
        <label>Credit Memo</label>
        <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
        <relationshipLabel>Credit Memo Screens</relationshipLabel>
        <relationshipName>Credit_Memo_Screens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>The creator of the Credit Memo template manually populates this optional text field. It can be used to describe the contents and layout of the Credit Memo template.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lookupkey__c</fullName>
        <description>This required text field automatically populates and provides the Credit Memo template a unique identifier.</description>
        <externalId>true</externalId>
        <label>LookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This required lookup field automatically populates and is used to specify the Screen record that is associated with the Credit Memo template.</description>
        <label>Screen</label>
        <referenceTo>nFORCE__Screen__c</referenceTo>
        <relationshipLabel>Credit Memo Screens</relationshipLabel>
        <relationshipName>Credit_Memo_Screens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Template_ID__c</fullName>
        <description>This required text field automatically populates and provides the Credit Memo template a unique identifier.</description>
        <label>Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Template_Name__c</fullName>
        <description>The creator of the Credit Memo template manually populates this required text field, which is used to name each Credit Memo template. The field value is visible to the end user.</description>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Memo Screen</label>
    <nameField>
        <label>Credit Memo Screen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Memo Screens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>